--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,13 @@
     <string name="app_name">FragmentListView</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Fragment Title -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name ="toolbar_title">View Note</string>
     <string name="toolbar_title_edit">Edit Note</string>
+
+    <!-- Menu title -->
+    <string name="long_press_menu">Edit</string>
+
+
 </resources>
