--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,13 @@
 
     <!-- Fragment Title -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name ="toolbar_title">View Note</string>
+    <string name="toolbar_title">View Note</string>
     <string name="toolbar_title_edit">Edit Note</string>
 
     <!-- Menu title -->
     <string name="long_press_menu">Edit</string>
 
+    <!-- Buttons title -->
+    <string name = "button_save">Save</string>
 
 </resources>
