--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Fragment Title -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="toolbar_title">View Note</string>
+    <string name="toolbar_title_view">View Note</string>
     <string name="toolbar_title_edit">Edit Note</string>
 
     <!-- Menu title -->
